--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
@@ -8166,7 +8167,7 @@ h1, h2, h3, h4, h5,
 
 .ftco-navbar-light {
   background: #ceb5b7 !important;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
@@ -8499,7 +8500,7 @@ h1, h2, h3, h4, h5,
               right: 0;
               bottom: 0;
               z-index: 1;
-              padding: 1em; } }
+              margin: 0 auto; } }
           .owl-carousel.home-slider .slider-item .slider-text .one-forth .text {
             width: 100%; }
             @media (min-width: 992px) {
